# statcode

./: .gitignore  package-lock.json  package.json
.claude/: settings.json  settings.local.json
.codegraph/: daemon.pid
.opencode/state/: codegraph-session-runtime.json
gui/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo
gui/src/: App.tsx  index.css
gui/src-tauri/: Cargo.toml  tauri.conf.json
gui/src-tauri/capabilities/: default.json
gui/src-tauri/icons/: icon.icns
gui/src-tauri/src/: main.rs
gui/src/components/: ArchitectureAnalysis.tsx  CodeAnalysis.tsx  FunctionGraph.tsx  HistoryModal.tsx  ModuleAnalysis.tsx  ProjectSelector.tsx  Settings.tsx  Sidebar.tsx  SymbolAnalysis.tsx  Titlebar.tsx  Welcome.tsx
gui/src/context/: ProjectContext.tsx  SettingsContext.tsx
gui/src/lib/: utils.ts
gui/src/types/: index.ts  react-force-graph-2d.d.ts
